--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
   <body>
     <header>
       <nav>
-        <img src="./assets/svg/firstlogo.svg" alt="logo" />
-        <ul>
+        <img class="non-responsive" src="./assets/svg/firstlogo.svg" alt="logo" />
+        <img class="responsive" src="./assets/img/resLogo.png" alt="resLogo">
+        <ul class="non-responsive">
           <li><a href="#">Why Open Enterprise</a></li>
           <li><a href="#">Features</a></li>
           <li><a href="#">Contribute</a></li>
           <li class="li-green"><a href="#">Request early access</a></li>
         </ul>
+        <img class="responsive" src="./assets/img/reshamburger.png" alt="hamburger">
       </nav>
     </header>
     <main>
@@ -69,7 +71,7 @@
         </div>
       </section>
 
-      <section class="third-sec">
+      <section class="third-sec non-responsive">
         <div class="third-left">
           <img src="./assets/svg/thirdSecIcn.svg" alt="thirdIc" />
           <h2>Kickstart an organization with your co-founders</h2>
@@ -106,7 +108,7 @@
         </div>
       </section>
 
-      <section class="fourth-sec">
+      <section class="fourth-sec  non-responsive">
         <div class="third-right">
           <div class="up">
             <img src="./assets/img/Jassir Jonis 1.png" alt="Jassir" />
@@ -143,7 +145,7 @@
         </div>
       </section>
 
-      <section class="fifth-sec">
+      <section class="fifth-sec non-responsive">
         <div class="third-left">
           <img src="./assets/img/Fifth-icon.png" alt="Fifth-icon" />
           <h2>Engage highly committed contributors</h2>
@@ -199,7 +201,7 @@
         </div>
       </section>
 
-      <section class="sixth-sec">
+      <section class="sixth-sec non-responsive">
         <h2>Help us improve Open Enterprise</h2>
         <div class="text">
           <p>
@@ -248,10 +250,10 @@
         </div>
         <button>View more</button>
       </section>
-      <div class="separator">
+      <div class="separator non-responsive">
         <img src="./assets/img/Divider.png" alt="divider">
       </div>
-      <section class="last-sec">
+      <section class="last-sec  non-responsive">
         <div class="last-left">
           <h2>Start an Open Enterprise</h2>
           <p>If you can’t wait to run a new or existing organization on Open Enterprise and are willing to explore and navigate the beta, we’d love to get you started.</p>
